// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseInput /> should render 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c10.c10.c10.c10.c10 {
  margin-left: 0px;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c9.c9.c9.c9.c9::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9:focus {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c7.c7.c7.c7.c7 {
  border-radius: 4px;
  width: 100%;
}

.c7.c7.c7.c7.c7:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="name-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c8"
          data-blade-component="base-box"
        >
          <input
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c9"
            data-blade-component="styled-base-input"
            id="name-1-input-2"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c10"
      data-blade-component="base-box"
    >
      <div
        class="c11"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<BaseInput /> should render base input with no borders 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c0.c0.c0.c0.c0::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0:focus {
  outline: none;
}

<input
  aria-describedby=""
  aria-disabled="false"
  aria-invalid="false"
  aria-required="false"
  class="c0"
  data-blade-component="styled-base-input"
  id="name-73-input-74"
  type="text"
  value=""
/>
`;

exports[`<BaseInput /> should render base input with no borders in error state 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c0.c0.c0.c0.c0::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0:focus {
  outline: none;
}

<input
  aria-describedby="name-91-errortext-93"
  aria-disabled="false"
  aria-invalid="true"
  aria-required="false"
  class="c0"
  data-blade-component="styled-base-input"
  id="name-91-input-92"
  type="text"
  value=""
/>
`;

exports[`<BaseInput /> should render base input with no borders in success state 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c0.c0.c0.c0.c0::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0:focus {
  outline: none;
}

<input
  aria-describedby="name-109-successtext-113"
  aria-disabled="false"
  aria-invalid="false"
  aria-required="false"
  class="c0"
  data-blade-component="styled-base-input"
  id="name-109-input-110"
  type="text"
  value=""
/>
`;

exports[`<BaseInput /> should render with icons 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 12px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
}

.c13.c13.c13.c13.c13 {
  margin-left: 0px;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c7.c7.c7.c7.c7 {
  border-radius: 4px;
  width: 100%;
}

.c7.c7.c7.c7.c7:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="name-127-input-128"
          style="width: auto; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c8"
          data-blade-component="base-box"
        >
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c10"
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="16px"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                  data-blade-component="svg-path"
                  fill="hsla(211, 22%, 56%, 1)"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                  data-blade-component="svg-path"
                  fill="hsla(211, 22%, 56%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <input
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c11"
            data-blade-component="styled-base-input"
            id="name-127-input-128"
            placeholder="First Last"
            type="text"
            value=""
          />
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="16px"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="hsla(211, 26%, 34%, 1)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
      data-blade-component="base-box"
    >
      <div
        class="c14"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<BaseInput /> should render with large size input 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 8px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 12px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14.c14.c14.c14.c14 {
  margin-left: 0px;
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c16.c16.c16.c16.c16 {
  margin-top: 8px;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 4px;
}

.c18.c18.c18.c18.c18 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-top: 2px;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c20.c20.c20.c20.c20 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
  height: 48px;
  min-height: 48px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(150,100%,32%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(150,100%,32%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(150,100%,32%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c19.c19.c19.c19.c19 {
  display: block;
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c7.c7.c7.c7.c7 {
  border-radius: 4px;
  width: 100%;
}

.c7.c7.c7.c7.c7:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="name-145-input-146"
          style="width: auto; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c8"
          data-blade-component="base-box"
        >
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c10"
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class=""
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                  data-blade-component="svg-path"
                  fill="hsla(211, 22%, 56%, 1)"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                  data-blade-component="svg-path"
                  fill="hsla(211, 22%, 56%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <input
            aria-describedby="name-145-successtext-149"
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c11"
            data-blade-component="styled-base-input"
            id="name-145-input-146"
            placeholder="First Last"
            type="text"
            value=""
          />
          <div
            class="c9"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="base-box"
            >
              <div
                class="c13"
                data-blade-component="box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-blade-component="icon"
                  fill="none"
                  height="20px"
                  viewBox="0 0 24 24"
                  width="20px"
                >
                  <path
                    d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                    data-blade-component="svg-path"
                    fill="hsla(150, 100%, 27%, 1)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      data-blade-component="base-box"
    >
      <div
        class="c15"
        data-blade-component="base-box"
      >
        <div
          class="c16"
          data-blade-component="base-box"
          id="name-145-successtext-149"
        >
          <span
            class="c17"
            data-blade-component="base-box"
          >
            <div
              class="c18"
              data-blade-component="box"
            >
              <svg
                aria-hidden="true"
                class="c19"
                data-blade-component="icon"
                fill="none"
                height="16px"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                  data-blade-component="svg-path"
                  fill="hsla(150, 100%, 27%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <span
              class="c20"
              data-blade-component="text"
            >
              Success
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseInput /> should render with trailingButton 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15.c15.c15.c15.c15 {
  margin-left: 0px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c14.c14.c14.c14.c14 {
  color: hsla(227,71%,51%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c9.c9.c9.c9.c9::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9:focus {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c7.c7.c7.c7.c7 {
  border-radius: 4px;
  width: 100%;
}

.c7.c7.c7.c7.c7:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c12.c12.c12.c12.c12 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c12.c12.c12.c12.c12 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c12.c12.c12.c12.c12:focus-visible .content-container {
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.09);
}

.c12.c12.c12.c12.c12 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="coupon-165-input-166"
          style="width: auto; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Coupon
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c8"
          data-blade-component="base-box"
        >
          <input
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c9"
            data-blade-component="styled-base-input"
            id="coupon-165-input-166"
            type="text"
            value=""
          />
          <div
            class="c10"
            data-blade-component="base-box"
          >
            <div
              class="c11"
              data-blade-component="base-box"
            >
              <button
                aria-disabled="false"
                class="c12"
                data-blade-component="link"
                role="button"
                type="button"
              >
                <span
                  class="c13 content-container"
                  data-blade-component="base-box"
                >
                  <span
                    class="c14"
                    data-blade-component="base-text"
                  >
                    Apply
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c15"
      data-blade-component="base-box"
    >
      <div
        class="c16"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<BaseInput /> should support passing data-analytics-* attributes to the input field 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c10.c10.c10.c10.c10 {
  margin-left: 0px;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c9.c9.c9.c9.c9::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9:focus {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c7.c7.c7.c7.c7 {
  border-radius: 4px;
  width: 100%;
}

.c7.c7.c7.c7.c7:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="name-555-input-556"
          style="width: auto; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c8"
          data-blade-component="base-box"
        >
          <input
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c9"
            data-analytics-name="base-input"
            data-blade-component="styled-base-input"
            id="name-555-input-556"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c10"
      data-blade-component="base-box"
    >
      <div
        class="c11"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
